# light-GG

./: .gitignore  CITATION.cff  LICENSE  README  README.md  pyproject.toml
notebooks_exploratory/: functions_LightGG.ipynb  functions_LightGG.py  grid.ipynb  grid_example3x3_i01.ipynb  grid_i02.ipynb  grid_sky_usage_example_i01.ipynb  grid_via_indexing_i01.ipynb  grid_via_indexing_i02.ipynb  grid_via_indexing_i03.ipynb  grid_via_indexing_i03.py  grid_via_indexing_sky_i01.ipynb  plot_grid_example_usagei01.ipynb  sky_3x3grid.fits
notes/: README_old.md  __init__.py  ideas.txt  ideas_old.txt
src/light_gg/: functions_LightGG.py
src/lightgg/: __init__.py
tutorials/: fake-flight-lines.ipynb  lightgg_functions.py  toy_field_i01.ipynb
