[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "light-gg"
version = "1.0.2"
description = "Lightweight, unit-agnostic 2D grid construction using 1D axes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Maria Stone" }
]

dependencies = [
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["light_gg"]
